hphp/test/slow/object/const/static/abstract/abstract_with_init.php.expectf
Fatal error: An abstract property must not have an initializer. in %s/abstract_with_init.php on line 5
